--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -111,28 +111,49 @@
                 <p><?php echo $this->__('Unsere starken Gastro-Marken') ?></p>
                 <ul>
                     <li>
-                        <a href="<?php echo Mage::getUrl('').'hersteller/rational'; ?>"><?php echo $this->__('Rational Kombidämpfer') ?></a>
+                        <a href="<?php echo Mage::getUrl('').'hersteller/bartscher'; ?>"><?php echo $this->__('Bartscher') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('').'hersteller/winterhalter'; ?>"><?php echo $this->__('Winterhalter Spülmaschinen') ?></a>
+                        <a href="<?php echo Mage::getUrl('').'hersteller/brita-professional'; ?>"><?php echo $this->__('Brita Professional') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('').'hersteller/jura'; ?>"><?php echo $this->__('Jura Kaffeevollautomaten') ?></a>
+                        <a href="<?php echo Mage::getUrl('').'hersteller/jura'; ?>"><?php echo $this->__('JURA') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('').'hersteller/panasonic'; ?>"><?php echo $this->__('Panasonic Mikrowellen') ?></a>
+                        <a href="<?php echo Mage::getUrl('').'hersteller/panasonic'; ?>"><?php echo $this->__('Panasonic') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('').'hersteller/bartscher'; ?>"><?php echo $this->__('Bartscher Gastrotechnik') ?></a>
+                        <a href="<?php echo Mage::getUrl('').'hersteller/rational'; ?>"><?php echo $this->__('Rational') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('').'hersteller/vaihinger-sanomat'; ?>"><?php echo $this->__('Sanomat Sahnemaschinen') ?></a>
+                        <a href="<?php echo Mage::getUrl('').'hersteller/winterhalter'; ?>"><?php echo $this->__('Winterhalter') ?></a>
                     </li>
                     <li>
-                        <a href="<?php echo Mage::getUrl('').'hersteller/brita-professional'; ?>"><?php echo $this->__('Brita Wasserfilter') ?></a>
+                        <a href="<?php echo Mage::getUrl('').'hersteller/vaihinger-sanomat'; ?>"><?php echo $this->__('Sanomat') ?></a>
                     </li>
+
                     <li>
                         <a href="<?php echo Mage::getUrl('').'hersteller'; ?>"><?php echo $this->__('weitere Gastro-Marken') ?></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer_categories">
+                <p><?php echo $this->__('Beliebte Gastro-Artikel') ?></p>
+                <ul>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('').'hersteller/rational/kombidaempfer'; ?>"><?php echo $this->__('Rational Kombidämpfer') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('').'hersteller/winterhalter/geschirrspuelmaschinen'; ?>"><?php echo $this->__('Winterhalter Geschirrspülmaschinen') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('').'hersteller/jura/kaffeevollautomaten'; ?>"><?php echo $this->__('Jura Kaffeevollautomaten') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('').'hersteller/seltmann-weiden/serie-salzburg'; ?>"><?php echo $this->__('Seltmann Weiden Salzburg') ?></a>
+                    </li>
+                    <li>
+                        <a href="<?php echo Mage::getUrl('').'hersteller/bartscher/thermik/salamander'; ?>"><?php echo $this->__('Bartscher Salamander') ?></a>
                     </li>
                 </ul>
             </div>
