--- a/skin/frontend/foundation/default/src/assets/scss/app.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/app.scss
@@ -46,8 +46,7 @@
 @include foundation-visibility-classes;
 @include foundation-float-classes;
 @include foundation-flex-classes;
-
-// @include foundation-prototype-classes;
+@include foundation-prototype-classes;
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
@@ -78,6 +77,7 @@ $lg-path-images: "../../../dist/assets/img";
 @import "custom/checkout";
 @import "custom/cms";
 @import "custom/cookielaw";
+@import "custom/fontawesome";
 @import "custom/footer";
 @import "custom/globals";
 @import "custom/grid";
