--- a/app/design/frontend/foundation/default/template/page/html/head.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/head.phtml
@@ -1,6 +1,6 @@
 <meta charset="UTF-8">
 <title><?php echo $this->getTitle() ?></title>
-<meta name="description" content="<?php echo htmlspecialchars($this->getDescription())cd ?>"/>
+<meta name="description" content="<?php echo htmlspecialchars($this->getDescription()) ?>"/>
 <meta name="robots" content="<?php echo htmlspecialchars($this->getRobots()) ?>"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <meta name="theme-color" content="#000C44"/>
